--- a/index.html
+++ b/index.html
@@ -1812,7 +1812,7 @@
             </div>
         </div>
         <!-- Experience End -->
-        <a href="https://drive.google.com/file/d/1McM9UoHvbKraZg7YIgW7YQ4xJ7ELQzhv/view" class="btn" download="Resume">Download CV</a>
+        <a href="images/resume/MyITresume.pdf" class="btn" download="Resume">Download CV</a>
         <a href="#contact-us" class="btn">Contact me</a>
 
     </div>
